--- a/styles.css
+++ b/styles.css
@@ -381,6 +381,10 @@ h4 {
     margin-top: 5rem;
   }
 
+  .row1, .row3 {
+	margin-left: 3rem;
+  }
+
   .row2,
   .row3 {
     margin-top: 6rem;
@@ -516,6 +520,17 @@ h4 {
   .pageTitle {
 	  margin: 0;
   }
+
+  .row1 {
+	  margin-left: .8rem;
+	  max-width: 90%;
+  }
+
+  .row2, .row3 {
+	  margin-left: .3rem;
+	  max-width: 95%;
+  }
+
 }
 
 @media screen and (max-width: 375px) {
