--- a/styles.css
+++ b/styles.css
@@ -399,7 +399,7 @@ h4 {
   }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 821px) and (min-width: 992px) {
   .jumbotron-fluid {
     background-image: url("https://nebula.wsimg.com/840c693529f31e06ee6baa5a49f13285?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1");
     /* background-repeat: no-repeat;*/
@@ -418,7 +418,7 @@ h4 {
   }
 
   #poolSide {
-    margin-top: 1rem;
+    margin: 1rem 0 2rem;
   }
 
 }
@@ -429,7 +429,7 @@ h4 {
   z-index: 0;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (min-width: 769px) and (max-width: 820px) {
   .writtenLogo {
     margin-left: 50px;
   }
@@ -438,9 +438,33 @@ h4 {
     display: flex;
     justify-content: center;
   }
+
+  .imgHouse {
+	display: flex;
+	justify-content: center;
+  }
+
+  #poolSide {
+	  width: 70%;
+	  margin: 0 0 2rem;
+  }
+
+  #fountain {
+	  width: 73%;
+	  margin: 3rem 0 2rem 2.7rem;
+  }
+
+  #hotel, #broadway {
+	  margin-left: 4rem;
+  }
+
+  #fronted {
+	  width: 75%;
+	  margin: 3rem 0 2rem 2.7rem;
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 581px) and (max-width: 768px) {
   .writtenLogo {
     margin-left: 50px;
     padding-top: 40px;
@@ -460,7 +484,7 @@ h4 {
   }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (min-width: 320px) and (max-width: 580px) {
 
   body, html {
 	  overflow-x: hidden;
@@ -510,6 +534,10 @@ h4 {
   #flag {
     margin-left: 0;
   }
+
+  #contactBlurb  {
+	  width: 100%;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -556,17 +584,17 @@ h4 {
   }
 
   .blurb {
-	  margin-left: 1rem;
+	  margin-left: 1.5rem;
 	  max-width: 90%;
   }
 
   #comprised {
-	margin-left: 1rem;
+	margin-left: 1.5rem;
 	max-width: 90%;
   }
 
   #broadway {
-	margin-left: 1rem;
+	margin-left: 1.5rem;
 	max-width: 90%; 
   }
 
