--- a/website files/styles.css
+++ b/website files/styles.css
@@ -25,6 +25,11 @@ header {
   z-index: 1;
 }
 
+header .writtenLogo a {
+  text-decoration: none;
+  color: #b08d57;colorcolor
+}
+
 .writtenLogo {
   display: block;
   margin: 0 auto 0 2rem;
@@ -278,14 +283,13 @@ hr {
 .mainBody {
   margin: 0 20px;
   z-index: 0;
-  padding-bottom: 5rem;
+  /* padding-bottom: .3rem; */
 }
 
 #flag {
   display: flex;
   max-width: 100%;
   height: auto;
-  margin: 0 0 3.5rem 22.5rem;
 }
 
 .about {
@@ -374,7 +378,6 @@ h4 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 5rem;
 }
 
 .year-in-review ul li {
@@ -407,9 +410,116 @@ h4 {
   box-shadow: rgb(0 0 0 / 90%) 0px 5px 15px;
 }
 
+#hours {
+  margin-top: 1rem;
+}
+
+footer {
+  padding-bottom: .3rem;
+}
+
+footer p {
+  padding: 0;
+  margin: 0;
+}
+
+footer h2  {
+  color: #b08d57;
+  margin-left: 2rem;
+}
+
+.powered-by a {
+  color: #b08d57;
+}
+
 /* @media's */
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1921px) and (max-width: 2560px) {
+  .locationBody {
+    margin-left: 22rem;
+  }
+
+  .row1 {
+    margin-left: 4rem;
+  }
+
+  .row1 .imgHouse img {
+    margin-left: 7rem;
+  }
+
+  #fountain {
+    margin-left: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  #hotel {
+    margin-left: 20rem;
+    margin-top: 8rem;
+  }
+
+  .row3 .imgHouse img {
+    margin-left: 10rem;
+  }
+}
+
+@media screen and (min-width: 1441px) and (max-width: 1920px) {
+  #flag {
+    display: flex;
+    max-width: 100%;
+    height: auto;
+    margin: 0 0 3.5rem 28.2rem;
+  }
+
+  .flag-blurb {
+    margin-left: 10rem;
+    margin-bottom: 5rem;
+    width: 80%;
+  }
+
+  .locationBody {
+    margin-top: 5rem;
+    margin-left: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .blurb {
+    margin-top: 2rem;
+  }
+
+  #hotel {
+    margin-top: 7rem;
+  }
+
+  #broadway {
+    margin-top: 7rem;
+  }
+
+  .auto-resize {
+    width: 1200px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 65%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+  }
+
+  .year-in-review {
+    margin-right: 3rem;
+  }
+}
+
+
+
+@media screen and (min-width: 1280px) and (max-width: 1440px) {
   body,
   html {
     overflow-x: hidden;
@@ -417,6 +527,13 @@ h4 {
 
   .writtenLogo {
     margin-left: 4rem;
+  }
+
+  #flag {
+    display: flex;
+    max-width: 100%;
+    height: auto;
+    margin: 0 0 3.5rem 23rem;
   }
 
   #poolSide,
@@ -449,6 +566,24 @@ h4 {
   .row3 {
     margin-top: 6rem;
   }
+
+  .auto-resize {
+    width: 1200px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 65%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+  }
 }
 
 /* Laptop 1024 */
@@ -469,7 +604,10 @@ h4 {
   }
 
   #flag {
-    margin-left: 9.5rem;
+    display: flex;
+    max-width: 100%;
+    height: auto;
+    margin-left: 10rem;
   }
 
   #poolSide,
@@ -510,6 +648,24 @@ h4 {
 
   .year-in-review ul li {
     margin-bottom: 1.3rem;
+  }
+
+  .auto-resize {
+    width: 900px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 65%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
   }
 }
 
@@ -571,6 +727,24 @@ h4 {
 
   .year-in-review ul li {
     margin-bottom: 1.3rem;
+  }
+
+  .auto-resize {
+    width: 700px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 65%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
   }
 }
 
@@ -692,6 +866,32 @@ h4 {
   .year-in-review ul li {
     margin-bottom: 1.3rem;
   }
+
+  .auto-resize {
+    width: 400px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 65%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+  }
+
+  footer .col-6 {
+    padding-left: 3rem;
+  }
+
+  .powered-by {
+    padding: 0 1rem;
+  }
 }
 
 @media screen and (min-width: 375px) and (max-width: 424px) {
@@ -801,6 +1001,24 @@ h4 {
 
   .year-in-review ul li {
     margin: 0 0 1.3rem 1.8rem;
+  }
+
+  .auto-resize {
+    width: 340px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 65%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
   }
 }
 
@@ -912,14 +1130,42 @@ h4 {
   .year-in-review ul li {
     margin: 0 0 1.3rem 0rem;
   }
+
+  .videoTitle {
+    font-size: 34px;
+  }
+
+  .auto-resize {
+    max-width: 200px;
+  }
+
+  .auto-resize > div {
+    position: relative;
+    padding-bottom: 50%;
+    height: 0px;
+  }
+
+  .auto-resize iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+  }
 }
 
 @media (orientation: landscape) and (hover: none) and (pointer: coarse) {
   nav {
-    top: 0;
+    top: 5%;
   }
 
   nav a {
     font-size: 23px;
   }
+
+  #chateau-dijon-popup {
+    max-width: 100%;
+  }
+}
+}
 }
