--- a/website_files/styles.css
+++ b/website_files/styles.css
@@ -460,6 +460,10 @@ footer h2  {
   .row3 .imgHouse img {
     margin-left: 10rem;
   }
+
+  .board-image-container img {
+    width: 40%;
+  }
 }
 
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
@@ -514,6 +518,10 @@ footer h2  {
 
   .year-in-review {
     margin-right: 3rem;
+  }
+
+  .board-image-container img {
+    width: 50%;
   }
 }
 
@@ -584,10 +592,14 @@ footer h2  {
     width: 100%;
     height: 70%;
   }
+
+  .board-image-container img {
+    width: 50%;
+  }
 }
 
 /* Laptop 1024 */
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (min-width: 993px) and (max-width: 1279px) {
   body,
   html {
     overflow-x: hidden;
@@ -666,6 +678,10 @@ footer h2  {
     left: 0;
     width: 100%;
     height: 70%;
+  }
+
+  .board-image-container img {
+    width: 50%;
   }
 }
 
