--- a/website_files/styles.css
+++ b/website_files/styles.css
@@ -348,6 +348,10 @@ hr {
   text-align: center !important;
 }
 
+.staff-image-container img {
+  width: 90%;
+}
+
 #contactBlurb {
   width: 30%;
   text-align: center;
@@ -462,7 +466,11 @@ footer h2  {
   }
 
   .board-image-container img {
-    width: 40%;
+    width: 33%;
+  }
+
+  .staff-image-container img {
+    width: 33%;
   }
 }
 
@@ -521,7 +529,11 @@ footer h2  {
   }
 
   .board-image-container img {
-    width: 50%;
+    width: 40%;
+  }
+
+  .staff-image-container img {
+    width: 30%;
   }
 }
 
@@ -595,6 +607,10 @@ footer h2  {
 
   .board-image-container img {
     width: 50%;
+  }
+
+  .staff-image-container img {
+    width: 40%;
   }
 }
 
@@ -678,6 +694,10 @@ footer h2  {
     left: 0;
     width: 100%;
     height: 70%;
+  }
+
+  .staff-image-container img {
+    width: 40%;
   }
 
   .board-image-container img {
