--- a/website_files/styles/board.css
+++ b/website_files/styles/board.css
@@ -1,9 +1,3 @@
-.board-image-container img {
-	/* width: 33%; */
-	/* position: relative; */
-	/* margin-bottom: 50px; */
-}
-
 .member {
 	height: 500px;
 	width: 100%;
@@ -23,7 +17,7 @@
 
 .board-name-bg {
 	width: 100%;
-  text-align: center;
+	text-align: center;
 }
 
 .board-name-bg h4 {
@@ -38,6 +32,11 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+}
+
+#emailBoard {
+	text-align: center;
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 320px) and (max-width: 374px) {
@@ -110,7 +109,7 @@
 }
 
 @media screen and (min-width: 581px) and (max-width: 992px) {
-  .board-image-container {
+	.board-image-container {
 		width: 100%;
 		position: relative;
 		padding-bottom: 20px;
@@ -142,7 +141,7 @@
 }
 
 @media screen and (min-width: 993px) and (max-width: 1279px) {
-  .board-image-container {
+	.board-image-container {
 		width: 100%;
 		position: relative;
 		padding-bottom: 20px;
@@ -169,44 +168,53 @@
 		margin-bottom: 1rem;
 		text-align: center;
 	}
+
+  #emailBoard a {
+    color: red;
+  }
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
 	.member {
-    height: 500px;
-    width: 100%;
-    margin-bottom: 9rem;
-  }
-  
-  .member img {
-    height: 95%;
-    object-fit: cover;
-    object-position: 50% 20%;
-  }
-  
-  .member h4 {
+		height: 500px;
+		width: 100%;
+		margin-bottom: 5.5rem;
+    margin-top: 3.5rem;
+	}
+
+	.member img {
+		height: 95%;
+		object-fit: cover;
+		object-position: 50% 20%;
+	}
+
+	.member h4 {
+		font-size: 2rem;
+		margin: 0;
+	}
+
+	.board-name-bg {
+		width: 100%;
+		text-align: center;
+	}
+
+	.board-name-bg h4 {
+		color: #000;
+	}
+
+	.board-name-bg p {
+		color: #b08d57;
+	}
+
+	.row {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+  #emailBoard a {
+    color: inherit;
     font-size: 2rem;
-    margin: 0;
-  }
-  
-  .board-name-bg {
-    width: 100%;
-    /* margin: 0 auto; */
-    text-align: center;
-  }
-  
-  .board-name-bg h4 {
-    color: #000;
-  }
-  
-  .board-name-bg p {
-    color: #b08d57;
-  }
-  
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
   }
 }
 
